<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessActivity">

    <Button
        android:id="@+id/guess_button_human"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="256dp"
        android:layout_height="65dp"
        android:layout_marginTop="464dp"
        android:layout_marginBottom="202dp"
        android:background="@drawable/button_background"
        android:text="@string/guess_text_human"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#292929"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/guess_button_ai"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="256dp"
        android:layout_height="65dp"
        android:layout_marginTop="552dp"
        android:layout_marginBottom="114dp"
        android:background="@drawable/button_background"
        android:text="@string/guess_text_ai"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#292929"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/guess_button_flag"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="169dp"
        android:layout_height="54dp"
        android:layout_marginTop="629dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/button_background"
        android:text="@string/guess_text_flag"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#292929"
        android:textSize="15sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/guess_image_decision"
        android:layout_width="294dp"
        android:layout_height="197dp"
        android:layout_marginTop="284dp"
        android:layout_marginBottom="284dp"
        android:contentDescription="@string/guess_image_guess_cd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guess_image_logo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guess_image_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guess" />

    <ImageView
        android:id="@+id/guess_image_logo"
        android:layout_width="342dp"
        android:layout_height="293dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="456dp"
        android:contentDescription="@string/guess_image_logo_cd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
